added new history attribute with corresponding class for document object
