# dms-rest/src/main/java/at/fhtw/rest/core/persistence/entity/Document.java
@@ -6,6 +6,7 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+import java.util.ArrayList;
 import java.util.List;
 
 @Data
@@ -34,4 +35,9 @@ public class Document {
     @OneToMany(cascade = CascadeType.ALL, fetch = FetchType.EAGER)
     @JoinColumn(name = "document_id")
     private List<DocumentStatusHistory> statusHistory;
+
+    @Builder.Default
+    @OneToMany(cascade = CascadeType.ALL, fetch = FetchType.EAGER)
+    @JoinColumn(name = "document_id")
+    private List<DocumentAccessHistory> accessHistory = new ArrayList<>();
 }
